Fallback improvement / + overall small improvements