@@ -1,6 +1,7 @@
 package org.example.orderservice.service;
 
 
+import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
 import org.example.commondto.dto.ProductDTO;
 import lombok.RequiredArgsConstructor;
 import org.example.orderservice.client.ProductClient;
@@ -13,7 +14,8 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+
 import org.springframework.stereotype.Service;
 
 
@@ -23,11 +25,15 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public class OrderService {
 
+
     private final OrderRepository orderRepository;
     private final OrderMapper orderMapper;
     private final ProductClient productClient;
+    public static final String PRODUCT_SERVICE = "productService";
 
 
+
+    @CircuitBreaker(name = PRODUCT_SERVICE, fallbackMethod = "createOrderFallback")
     public OrderDTO createOrder(OrderDTO orderDto) {
         validateProductsAvailability(orderDto);
 
@@ -51,20 +57,22 @@ public class OrderService {
         return orderMapper.toDto(savedOrder);
     }
 
-    private void validateProductsAvailability(OrderDTO orderDto) {
-        for (OrderDTO.OrderItemDTO item : orderDto.getItems()) {
-            ResponseEntity<ProductDTO> response = productClient.getProductById(item.getProductId());
-            ProductDTO product = response.getBody();
+    public OrderDTO createOrderFallback(OrderDTO orderDto, Exception ex) {
+        throw new RuntimeException("Unable to process order due to service unavailability: " + ex.getMessage());
+    }
 
-            if (product == null || "Unavailable product".equals(product.getName())) {
-                throw new RuntimeException("Product not found: " + item.getProductId());
-            }
+    private void validateProductsAvailability(OrderDTO orderDto) {
+        orderDto.getItems().forEach(item -> {
+            ProductDTO product = Optional.ofNullable(productClient.getProductById(item.getProductId()).getBody())
+                    .filter(p -> !"Unavailable product".equals(p.getName()))
+                    .orElseThrow(() -> new RuntimeException("Product not found: " + item.getProductId()));
 
             if (product.getStockQuantity() < item.getQuantity()) {
                 throw new RuntimeException("Insufficient stock for product: " + item.getProductId());
             }
+
             item.setUnitPrice(product.getPrice());
-        }
+        });
     }
 
 
@@ -74,12 +82,14 @@ public class OrderService {
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
     }
 
+    @Transactional(readOnly = true)
     public List<OrderDTO> getAllOrders() {
         return orderRepository.findAll().stream()
                 .map(orderMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Transactional(readOnly = true)
     public OrderDTO getOrderById(Long id) {
         Order order = orderRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Order not found"));
